# TinvestPy

./: Makefile  README.md  pyproject.toml  setup.py
Examples/: Accounts.py  Bars.py  Connect.py  Stream.py  Ticker.py  Transactions.py
TinvestPy/: TinvestPy.py  __init__.py
TinvestPy/grpc/: common_pb2_grpc.py  instruments_pb2.py  instruments_pb2.pyi  instruments_pb2_grpc.py  marketdata_pb2.py  marketdata_pb2.pyi  marketdata_pb2_grpc.py  operations_pb2.py  operations_pb2.pyi  operations_pb2_grpc.py  orders_pb2.py  orders_pb2_grpc.py  sandbox_pb2.py  sandbox_pb2.pyi  sandbox_pb2_grpc.py  signals_pb2.py  signals_pb2_grpc.py  stoporders_pb2.py  stoporders_pb2_grpc.py  users_pb2.py  users_pb2.pyi  users_pb2_grpc.py
grpc/: common_pb2.py  instruments_pb2_grpc.py  marketdata_pb2.py  operations_pb2.py  operations_pb2_grpc.py  orders_pb2.pyi  orders_pb2_grpc.py  sandbox_pb2.py  signals_pb2.py  signals_pb2.pyi  stoporders_pb2.pyi
