[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TinvestPy"
version = "1.42.2026.01.01"
description = "Библиотека-обертка, которая позволяет работать с T-Invest API брокера Т-Инвестиции из Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Чечет Игорь Александрович"}
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
  "keyring>=25.7.0",
  "grpcio>=1.78.0",
  "protobuf>=6.33.5",
  "googleapis-common-protos>=1.72.0",
  "types-protobuf>=6.32.1.20251210"
]

[project.urls]
Homepage = "https://github.com/cia76/TinvestPy"
Repository = "https://github.com/cia76/TinvestPy"

[tool.setuptools.package-data]
"TinvestPy" = ["grpc/**/*"]